[package]
name = "urcl-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
logos = "0.13.0"
thousands = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
overflow-checks = false

[profile.dev]
overflow-checks = false
